crates/obzenflow_adapters/tests/ui/effect_recovery/private_breaker_attachment.stderr
error[E0624]: associated function `circuit_breaker` is private
  --> tests/ui/effect_recovery/private_breaker_attachment.rs:10:37
   |
10 |     let _ = EffectPolicyAttachment::circuit_breaker(policy);
   |                                     ^^^^^^^^^^^^^^^ private associated function
   |
  ::: src/middleware/control/policy/effect/attachment.rs
   |
   |     pub(crate) fn circuit_breaker(policy: Arc<CircuitBreakerMiddleware>) -> Self {
   |     ---------------------------------------------------------------------------- private associated function defined here
